--- a/main.ipynb
+++ b/main.ipynb
@@ -20,31 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def grafico_precio_usd(archivo_json):\n",
-    "    with open(\"precio_usd.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "        data = json.load(file)\n",
-    "    #Extrae los valores de precio\n",
-    "    precios = data[\"precio\"]\n",
-    "    #Separa los valores de fecha y de precio\n",
-    "    dates = [item[\"fecha\"] for item in precios]\n",
-    "    values_usd = [item[\"usd\"] for item in precios]\n",
-    "\n",
-    "    # Confección de la gráfica\n",
-    "    plt.figure(figsize=(14, 5))\n",
-    "    plt.plot(dates, values_usd, marker=\"*\", linestyle=\":\", color=\"#401408\", label=\"USD en CUP\")\n",
-    "    plt.title(\"Cambio del precio del USD\")\n",
-    "    plt.xlabel(\"Fecha\")\n",
-    "    plt.ylabel(\"Precio en CUP\")\n",
-    "    plt.xticks(rotation=90, ha ='right')\n",
-    "    plt.grid(True)\n",
-    "    plt.tight_layout()\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
-    "\n",
-    "grafico_precio_usd(\"precio_usd.json\")"
+    "utils.grafico_precio_usd(\"precio_usd.json\")"
    ]
   },
   {
@@ -68,59 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def promedio_precios(ruta_archivo):\n",
-    "    with open(\"tiendas.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "        data = json.load(file)\n",
-    "    #Diccionario que recopila los valores necesarios\n",
-    "    dictionary = {} \n",
-    "    #Extrae los valores necesarios para calcular el promedio\n",
-    "    if \"stores\" in data:\n",
-    "        for store in data[\"stores\"]:\n",
-    "            if \"products\" in store:\n",
-    "                for product in store[\"products\"]:\n",
-    "                    if \"type\" in product and \"price\" in product:\n",
-    "                        type = product[\"type\"]\n",
-    "                        #Deja solo el valor numérico de price\n",
-    "                        price_str = product[\"price\"].split()[0]  \n",
-    "                        # Convierte el precio en float\n",
-    "                        if price_str.isdigit():\n",
-    "                            price = float(price_str)\n",
-    "                            if type not in dictionary:\n",
-    "                                dictionary[type] = []\n",
-    "                            dictionary[type].append(price)\n",
-    "    #Calcula los promedios y los guarda en un diccionario\n",
-    "    prom = {}\n",
-    "    for type in dictionary:\n",
-    "        precios = dictionary[type]\n",
-    "        if len(precios) > 0:\n",
-    "            suma = 0\n",
-    "            for p in precios:\n",
-    "                suma += p\n",
-    "            prom[type] = suma / len(precios)\n",
-    "\n",
-    "    return prom\n",
-    "\n",
-    "def graficar_promedios(prom):\n",
-    "    keys = list(prom.keys())\n",
-    "    values = list(prom.values())\n",
-    "\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.bar(keys, values, color=\"#5e4d3b\")\n",
-    "    plt.axhline(y=3056, color=\"#533527\", ls=\"--\", label=\"Pensión mínima\")\n",
-    "    plt.title(\"Precio promedio por tipo de producto\")\n",
-    "    plt.xlabel(\"Tipo de producto\")\n",
-    "    plt.ylabel(\"Precio promedio (CUP)\")\n",
-    "    plt.xticks(rotation=45, ha=\"right\")\n",
-    "    plt.grid(axis='y')\n",
-    "    plt.legend()\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "promedios = promedio_precios(\"tiendas.json\")\n",
-    "graficar_promedios(promedios)"
+    "promedios = utils.promedio_precios_cup(\"tiendas.json\")\n",
+    "utils.graficar_promedios(promedios)"
    ]
   },
   {
@@ -130,28 +59,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def data_habana(archivo):\n",
-    "    with open(archivo, \"r\", encoding=\"utf-8\") as f:\n",
-    "        datos = json.load(f)\n",
-    "    # Busca los datos de las categorías para La Habana\n",
-    "    for j in datos[\"Por ciento de establecimientos por región\"]:\n",
-    "        if j[\"region\"].lower() == \"la habana\":\n",
-    "            valores = [j[\"estatal\"], j[\"particular\"], j[\"agropecuario\"]]  \n",
-    "            etiquetas = [\"Estatal\", \"Particular\", \"Agropecuario\"]\n",
-    "            return etiquetas, valores\n",
-    "\n",
-    "def grafico_pie(etiquetas, valores):\n",
-    "    plt.figure(figsize=(6, 6))\n",
-    "    plt.pie(valores, labels=etiquetas, autopct=\"%1.1f%%\", startangle=90, colors=[\"#fedabb\", \"#ff9999\", \"#f0d4cb\"])\n",
-    "    plt.title(\"Porcentaje de Establecimientos en La Habana\")\n",
-    "    plt.axis(\"equal\")\n",
-    "    plt.show()\n",
-    "\n",
-    "etiquetas, valores = data_habana(\"porciento_mercados.json\")\n",
-    "grafico_pie(etiquetas, valores)"
+    "etiquetas, valores = utils.data_habana(\"porciento_mercados.json\")\n",
+    "utils.grafico_pie_habana(etiquetas, valores)"
    ]
   },
   {
@@ -161,28 +72,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def data_ch(archivo):\n",
-    "    with open(archivo, \"r\", encoding=\"utf-8\") as f:\n",
-    "        datos = json.load(f)\n",
-    "    # Busca los datos de las categorías para Centro Habana\n",
-    "    for j in datos[\"Por ciento de establecimientos por región\"]:\n",
-    "        if j[\"region\"].lower() == \"centro habana\":\n",
-    "            valores = [j[\"estatal\"], j[\"particular\"], j[\"agropecuario\"]]  \n",
-    "            etiquetas = [\"Estatal\", \"Particular\", \"Agropecuario\"]\n",
-    "            return etiquetas, valores\n",
-    "\n",
-    "def grafico_pie(etiquetas, valores):\n",
-    "    plt.figure(figsize=(6, 6))\n",
-    "    plt.pie(valores, labels=etiquetas, autopct=\"%1.1f%%\", startangle=90, colors=[\"#fedabb\", \"#ff9999\", \"#f0d4cb\"])\n",
-    "    plt.title(\"Porcentaje de Establecimientos en Centro Habana\")\n",
-    "    plt.axis(\"equal\")\n",
-    "    plt.show()\n",
-    "\n",
-    "etiquetas, valores = data_ch(\"porciento_mercados.json\")\n",
-    "grafico_pie(etiquetas, valores)"
+    "etiquetas, valores = utils.data_ch(\"porciento_mercados.json\")\n",
+    "utils.grafico_pie_ch(etiquetas, valores)"
    ]
   },
   {
@@ -218,44 +111,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def leche_en_polvo(archive):\n",
-    "    with open(\"tiendas.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "        data = json.load(file)\n",
-    "    #Extrae los precios de la leche en polvo en las tiendas\n",
-    "    store_prices = []\n",
-    "    for store in data[\"stores\"]:\n",
-    "        store_name = store[\"names\"]\n",
-    "        for product in store[\"products\"]:\n",
-    "            if product[\"type\"] == \"Leche en polvo\" and product[\"net weight\"] == \"1 kg\":\n",
-    "                price_str = product[\"price\"].replace(\" cup\", \"\").strip()\n",
-    "                if price_str.isdigit():\n",
-    "                    store_prices.append((store_name, int(price_str)))\n",
-    "    return store_prices\n",
-    "\n",
-    "def grafica_comp_leche(i):\n",
-    "    #Separa las tuplas en listas\n",
-    "    store_names = []\n",
-    "    for pair in leche_en_polvo(\"tiendas.json\"):\n",
-    "        name = pair[0]\n",
-    "        store_names.append(name)\n",
-    "    prices = []\n",
-    "    for pair in leche_en_polvo(\"tiendas.json\"):\n",
-    "        price = pair[1]\n",
-    "        prices.append(price)\n",
-    "\n",
-    "    plt.bar(store_names, prices, color=\"#d9b59b\")\n",
-    "    plt.axhline(y=1045, color=\"#533527\", ls=\"--\", label=\"Precio topado\")\n",
-    "    plt.legend()\n",
-    "    plt.title(\"Comparación del precio de la leche en polvo\")\n",
-    "    plt.xticks(rotation=45, ha=\"right\")\n",
-    "    plt.annotate(\"Precio topado: 1045 CUP\", xy=(len(store_names)//2, 1045), xytext=(len(store_names)//2, 1045), ha=\"center\",)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "grafica_comp_leche(\"tiendas.json\")"
+    "data = utils.leche_en_polvo(\"tiendas.json\")\n",
+    "utils.grafica_comp_leche(data)"
    ]
   },
   {
@@ -265,44 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def spaghetti(archive):\n",
-    "    with open(\"tiendas.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "        data = json.load(file)\n",
-    "    #Extrae los precios del spaghetti en las tiendas \n",
-    "    store_prices = []\n",
-    "    for store in data[\"stores\"]:\n",
-    "        store_name = store[\"names\"]\n",
-    "        for product in store[\"products\"]:\n",
-    "            if product[\"type\"] == \"Spaghetti\":\n",
-    "                price_str = product[\"price\"].replace(\" cup\", \"\").strip()\n",
-    "                if price_str.isdigit():\n",
-    "                    store_prices.append((store_name, int(price_str)))\n",
-    "    return store_prices\n",
-    "\n",
-    "def grafica_comp_spaghetti(i):\n",
-    "    #Separa las tuplas en listas\n",
-    "    store_names = []\n",
-    "    for pair in spaghetti(\"tiendas.json\"):\n",
-    "        name = pair[0]\n",
-    "        store_names.append(name)\n",
-    "    prices = []\n",
-    "    for pair in spaghetti(\"tiendas.json\"):\n",
-    "        price = pair[1]\n",
-    "        prices.append(price)\n",
-    "\n",
-    "    plt.bar(store_names,prices,color=\"#a66a4e\")\n",
-    "    plt.axhline(y=417, color=\"#d18d5c\",ls=\"--\",label=\"Precio topado\")\n",
-    "    plt.legend()\n",
-    "    plt.annotate(\"Precio topado: 417 CUP\", xy=(len(store_names)//2, 417), xytext=(len(store_names)//2, 417), ha=\"center\",)\n",
-    "    plt.title(\"Comparación del precio de las pastas\")\n",
-    "    plt.xticks(rotation=45, ha=\"right\")\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "grafica_comp_spaghetti(\"tiendas.json\")"
+    "data = utils.spaghetti(\"tiendas.json\")\n",
+    "utils.grafica_comp_spaghetti(data)"
    ]
   },
   {
@@ -312,44 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def aceite(archive):\n",
-    "    with open(\"tiendas.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "        data = json.load(file)\n",
-    "    #Extrae los precios del aceite en las tiendas\n",
-    "    store_prices = []\n",
-    "    for store in data[\"stores\"]:\n",
-    "        store_name = store[\"names\"]\n",
-    "        for product in store[\"products\"]:\n",
-    "            if product[\"type\"] == \"Aceite vegetal\":\n",
-    "                price_str = product[\"price\"].replace(\" cup\", \"\").strip()\n",
-    "                if price_str.isdigit():\n",
-    "                    store_prices.append((store_name, int(price_str)))\n",
-    "    return store_prices\n",
-    "\n",
-    "def grafica_comp_aceite(i):\n",
-    "    #Separa las tuplas en listas\n",
-    "    store_names = []\n",
-    "    for pair in aceite(\"tiendas.json\"):\n",
-    "        name = pair[0]\n",
-    "        store_names.append(name)\n",
-    "    prices = []\n",
-    "    for pair in aceite(\"tiendas.json\"):\n",
-    "        price = pair[1]\n",
-    "        prices.append(price)\n",
-    "    \n",
-    "    plt.bar(store_names,prices,color=\"#7c5c4b\")\n",
-    "    plt.axhline(y=810,color=\"#d5ba9f\",ls=\"--\",label=\"Precio topado\")\n",
-    "    plt.legend()\n",
-    "    plt.title(\"Comparación del precio del aceite\")\n",
-    "    plt.annotate(\"Precio topado: 810 CUP\", xy=(len(store_names)//2, 810), xytext=(len(store_names)//2, 810), ha=\"center\",)\n",
-    "    plt.xticks(rotation=70, ha=\"right\")\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "grafica_comp_aceite(\"tiendas.json\")"
+    "data = utils.aceite(\"tiendas.json\")\n",
+    "utils.grafica_comp_aceite(data)"
    ]
   },
   {
@@ -369,124 +160,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import utils\n",
     "\n",
-    "def prom_usd(archive):\n",
-    "    with open(\"precio_usd.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "        data_precio = json.load(f)\n",
-    "    #Calcula el precio promedio del usd\n",
-    "    precios_usd = []\n",
-    "    for item in data_precio[\"precio\"]:\n",
-    "        if \"usd\" in item and type(item[\"usd\"]) in [int, float]:\n",
-    "            precios_usd.append(item[\"usd\"])\n",
-    "    tasa_usd = sum(precios_usd) / len(precios_usd)\n",
-    "    return tasa_usd\n",
-    "\n",
-    "def extraer_data_cup(archive):\n",
-    "    with open(\"tiendas.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "        data_cup = json.load(f)\n",
-    "    #Crea una lista con los productos de las tiendas\n",
-    "    productos_cup = []\n",
-    "    for tienda in data_cup[\"stores\"]:\n",
-    "        for producto in tienda[\"products\"]:\n",
-    "            precio_str = producto[\"price\"]\n",
-    "            if \"cup\" in precio_str:\n",
-    "                precio = float(precio_str.replace(\"cup\", \"\").strip())\n",
-    "                productos_cup.append({\"tipo\": producto[\"type\"], \"precio\": precio})\n",
-    "    return productos_cup\n",
-    "\n",
-    "def extraer_data_usd(archive):\n",
-    "    with open(\"tiendas_usd.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "        data_usd = json.load(f)\n",
-    "    #Crea una lista con los productos de las tiendas en usd\n",
-    "    productos_usd = []\n",
-    "    for tienda in data_usd[\"usd_stores\"]:\n",
-    "        for producto in tienda[\"products\"]:\n",
-    "            if type(producto[\"price\"]) in [int, float]:\n",
-    "                precio = producto[\"price\"] * prom_usd(\"precio_usd.json\")\n",
-    "                productos_usd.append({\"tipo\": producto[\"type\"], \"precio\": precio})\n",
-    "    return productos_usd\n",
-    "\n",
-    "#Filtra los elementos de las listas para encontrar los productos en común\n",
-    "def comunes(i, j):\n",
-    "    global tipos_comunes, filtrados_cup, filtrados_usd\n",
-    "    #Busca los type de las tiendas en cup\n",
-    "    tipos_cup = []\n",
-    "    for p in productos_cup:\n",
-    "        if p[\"tipo\"] not in tipos_cup:\n",
-    "            tipos_cup.append(p[\"tipo\"])\n",
-    "    #Busca los type de las tiendas en usd\n",
-    "    tipos_usd = []\n",
-    "    for p in productos_usd:\n",
-    "        if p[\"tipo\"] not in tipos_usd:\n",
-    "            tipos_usd.append(p[\"tipo\"])\n",
-    "    #Crea una lista con los type en comun de ambas listas\n",
-    "    tipos_comunes = []\n",
-    "    for t in tipos_cup:\n",
-    "        if t in tipos_usd:\n",
-    "            tipos_comunes.append(t)\n",
-    "    # Filtra productos\n",
-    "    filtrados_cup = []\n",
-    "    for p in productos_cup:\n",
-    "        if p[\"tipo\"] in tipos_comunes:\n",
-    "            filtrados_cup.append(p)\n",
-    "\n",
-    "    filtrados_usd = []\n",
-    "    for p in productos_usd:\n",
-    "        if p[\"tipo\"] in tipos_comunes:\n",
-    "            filtrados_usd.append(p)\n",
-    "    return tipos_comunes, filtrados_cup, filtrados_usd\n",
-    "\n",
-    "#Calcula el prom de los precios de los productos de ambas lista\n",
-    "def calcular_prom(cup, usd):\n",
-    "    global prom_cup, prom_usd\n",
-    "    prom_cup = {}\n",
-    "    prom_usd = {}\n",
-    "    for tipo in tipos_comunes:\n",
-    "        #Tiendas en cup\n",
-    "        suma_cup = 0\n",
-    "        cantidad_cup = 0\n",
-    "        for p in cup:\n",
-    "            if p[\"tipo\"] == tipo:\n",
-    "                suma_cup += p[\"precio\"]\n",
-    "                cantidad_cup += 1\n",
-    "        if cantidad_cup > 0:\n",
-    "            prom_cup[tipo] = suma_cup / cantidad_cup\n",
-    "        #Tiendas en usd\n",
-    "        suma_usd = 0\n",
-    "        cantidad_usd = 0\n",
-    "        for p in usd:\n",
-    "            if p[\"tipo\"] == tipo:\n",
-    "                suma_usd += p[\"precio\"]\n",
-    "                cantidad_usd += 1\n",
-    "        if cantidad_usd > 0:\n",
-    "            prom_usd[tipo] = suma_usd / cantidad_usd\n",
-    "\n",
-    "def grafica_comparacion(cup, usd):\n",
-    "    #Organiza las listas por producto en orden alfabético\n",
-    "    tipos_ordenados = sorted(tipos_comunes)\n",
-    "    valores_cup = [prom_cup[t] for t in tipos_ordenados]\n",
-    "    valores_usd = [prom_usd[t] for t in tipos_ordenados]\n",
-    "    #Compone el eje x por orden\n",
-    "    x = range(len(tipos_ordenados))\n",
-    "    ancho = 0.40 #tamaño de las barras\n",
-    "\n",
-    "    plt.figure(figsize=(10, 5))\n",
-    "    plt.bar([i - ancho/2 for i in x], valores_cup, width=ancho, label=\"Tiendas CUP\", color=\"#a66a4e\")\n",
-    "    plt.bar([i + ancho/2 for i in x], valores_usd, width=ancho, label=\"Tiendas USD (convertido)\", color=\"#533527\")\n",
-    "    plt.xticks(x, tipos_ordenados, rotation=45)\n",
-    "    plt.ylabel(\"Precio promedio (CUP)\")\n",
-    "    plt.title(\"Comparación de precios promedio por tipo de producto\")\n",
-    "    plt.legend()\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "productos_cup = extraer_data_cup(\"tiendas.json\")\n",
-    "productos_usd = extraer_data_usd(\"tiendas_usd.json\")\n",
-    "tipos_comunes, filtrados_cup, filtrados_usd = comunes(productos_cup, productos_usd)\n",
-    "calcular_prom(filtrados_cup, filtrados_usd)\n",
-    "grafica_comparacion(prom_cup, prom_usd)"
+    "prom_cup = utils.promedio_precios_cup(\"tiendas.json\")\n",
+    "prom_usd = utils.promedio_precios_usd(\"tiendas_usd.json\")\n",
+    "utils.grafica_comparacion(prom_cup, prom_usd)"
    ]
   },
   {
@@ -502,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -516,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
