--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
     "## ¿Quién cuida a quienes nos cuidaron? \n",
     "La población de Cuba se ha visto gravemente afectada por la compleja situación económica que está viviendo el país, especialmente los adultos mayores. Más del 25% de los cubanos tienen 60 años o más, una cifra que refleja el envejecimiento progresivo de la sociedad cubana. Este grupo es vulnerable y, por lo tanto, enfrenta grandes desafíos, debido a que la pensión mínima estatal ronda los 3056 cup, una cantidad que resulta insuficiente para cubrir las necesidades básicas en un contexto de alta inflación y fluctuación del dólar.\n",
     "\n",
-    "El 4 de marzo de 2022, Cubadebate publicó un artículo titulado \"Más viejos, más vulnerables: Los achaques económicos del adulto mayor\", escrito por: Roberto Alfonso Lara,Roxana Martínez Abreu, Luana Lobelle Muñiz, y Darline Shenandra Carbó Díaz. Esta noticia expuso la situación de los ancianos en Cienfuegos, resaltando su creciente invisibilidad social y la insuficiencia de las pensiones frente al costo de la vida. A través de testimonios y datos oficiales, se revela cómo la vejez en la isla está marcada por escasez, dependencia y lucha diaria por la subsistencia.\n",
+    "El 4 de marzo de 2022, Cubadebate publicó un artículo titulado \"Más viejos, más vulnerables: Los achaques económicos del adulto mayor\", escrito por: Roberto Alfonso Lara, Roxana Martínez Abreu, Luana Lobelle Muñiz, y Darline Shenandra Carbó Díaz. Esta noticia expuso la situación de los ancianos en Cienfuegos, resaltando su creciente invisibilidad social y la insuficiencia de las pensiones frente al costo de la vida. A través de testimonios y datos oficiales, se revela cómo la vejez en la isla está marcada por escasez, dependencia y lucha diaria por la subsistencia.\n",
     "\n",
     "Actualmente, la economía en Cuba depende directamente del precio del dólar. Durante el 2025, el valor del dólar estadounidense(usd) en el mercado cubano ha variado de manera considerable, llegando a superar los 450 pesos cubanos por dólar, esto a su vez, generó que aumentaran los precios en productos y servicios, dificultando aún más las capacidades adquisitivas de los adultos mayores."
    ]
@@ -30,26 +30,7 @@
    "id": "ca082aa9",
    "metadata": {},
    "source": [
-    "La mayoría de los cubanos realizaba sus compras en mercados estatales que vendían en moneda nacional (CUP), pero, a causa de la situación actual, estos mercados enfrentan una creciente escasez de productos básicos. Los consumidores se ven obligados a realizar sus compras en mercados particulares, los cuales cada día son más comunes para la población. La Oficina Nacional de Estadística e Información (ONEI) reportó en diciembre del 2025 que cantidad de establecimientos por tipo de mercado, en La Habana, era de: 83,31% particulares y 12,51% estatales; y Centro Habana de: 13.40% estatales y 81.23% particulares.\n",
-    "\n",
-    "Aunque estos negocios se encargan de llenar el vacío que el mercado estatal no puede cubrir, siguen siendo inaccesibles para muchos. La mayoría de estos vendedores fija sus precios en función del dólar estadounidense (USD), dada la fuerte influencia de esta moneda en la economía cubana.\n",
-    "\n",
-    "Los precios de muchos productos equivalen a más de la mitad de la pensión mínima. Esto dificulta a los ancianos la adquisición de productos básicos con los cuales puedan conformar una dieta sana, capaz de suplir sus necesidades.\n",
-    "\n",
-    "“También están los ‘mandados’, la dieta, y no existe forma de que me alcance. He vendido casi todo lo que tenía de valor, y hay meses que ya no sé qué voy a hacer. Estoy sin ropa, sin zapatos, sin nada. Vivo —dijo— de la caridad de la gente, de lo que puedan darme, y no siento pena al decirlo”. - Cubadebate, 4 de marzo de 2022"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d58ac178",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import utils\n",
-    "\n",
-    "promedios = utils.promedio_precios_cup(\"tiendas.json\")\n",
-    "utils.graficar_promedios(promedios)"
+    "La mayoría de los cubanos realizaba sus compras en mercados estatales que vendían en moneda nacional (CUP), pero, a causa de la situación actual, estos mercados enfrentan una creciente escasez de productos básicos. Los consumidores se ven obligados a realizar sus compras en mercados particulares, los cuales cada día son más comunes para la población. La Oficina Nacional de Estadística e Información (ONEI) reportó en diciembre del 2025 que cantidad de establecimientos por tipo de mercado, en La Habana, era de: 83,31% particulares y 12,51% estatales; y en Centro Habana de: 13.40% estatales y 81.23% particulares.\n"
    ]
   },
   {
@@ -180,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
