--- a/main.ipynb
+++ b/main.ipynb
@@ -61,6 +61,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abd2272b",
+   "metadata": {},
+   "source": [
+    "Estos mercados particulares, cada vez más comunes, se ven obligados a fijar sus precios tomando como referencia principal el dólar estadounidense. Esta práctica, aunque ayuda a reponer mercancías faltantes que la población solicita, ha provocado que los precios de productos básicos alcancen niveles que resultan inalcanzables para gran parte de la población. Los adultos mayores, que dependen exclusivamente de una pensión en moneda nacional, suelen ser los más afectados. Con ingresos insuficientes, ven difícil acceder a alimentos, medicinas y artículos de primera necesidad."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc4574d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils\n",
+    "\n",
+    "prom_precios = utils.promedio_precios_cup(\"tiendas.json\")\n",
+    "utils.graficar_promedios(prom_precios)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "81ab3e77",
    "metadata": {},
    "source": [
