--- a/main.ipynb
+++ b/main.ipynb
@@ -35,23 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a802a3e9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'porciento_mercador.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m etiquetas, valores = \u001b[43mutils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdata_habana\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mporciento_mercados.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m utils.grafico_pie_habana(etiquetas, valores)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\sheyl\\proyecto_icd_pro\\utils.py:72\u001b[39m, in \u001b[36mdata_habana\u001b[39m\u001b[34m(archive)\u001b[39m\n\u001b[32m     71\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdata_habana\u001b[39m(archive):\n\u001b[32m---> \u001b[39m\u001b[32m72\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mporciento_mercador.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     73\u001b[39m         datos = json.load(f)\n\u001b[32m     74\u001b[39m     \u001b[38;5;66;03m# Busca los datos de las categorías para La Habana\u001b[39;00m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'porciento_mercador.json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import utils\n",
     "\n",
@@ -110,13 +97,10 @@
     "\n",
     "| Productos      | Unidad de medida | Precio |\n",
     "|----------------|------------------|--------|\n",
-    "| Leche en polvo | 1 kg             | 1045   |\n",
+    "| Leche en polvo | 1 kg             | 1675   |\n",
     "| Pastas alimenticias | 1 kg        | 835    |\n",
     "| Pastas alimenticias | 500 g       | 417    |\n",
-    "| Aceite         | 1 l              | 900    |\n",
-    "| Aceite         | 900 ml           | 810    |\n",
-    "| Aceite         | 800 ml           | 720    |\n",
-    "| Aceite         | 700 ml           | 630    |"
+    "| Aceite         | 1 l              | 990    |"
    ]
   },
   {
