--- a/main.ipynb
+++ b/main.ipynb
@@ -64,7 +64,9 @@
    "id": "abd2272b",
    "metadata": {},
    "source": [
-    "Estos mercados particulares, cada vez más comunes, se ven obligados a fijar sus precios tomando como referencia principal el dólar estadounidense. Esta práctica, aunque ayuda a reponer mercancías faltantes que la población solicita, ha provocado que los precios de productos básicos alcancen niveles que resultan inalcanzables para gran parte de la población. Los adultos mayores, que dependen exclusivamente de una pensión en moneda nacional, suelen ser los más afectados. Con ingresos insuficientes, ven difícil acceder a alimentos, medicinas y artículos de primera necesidad."
+    "Estos mercados particulares, cada vez más comunes, se ven obligados a fijar sus precios tomando como referencia principal el dólar estadounidense. Esta práctica, aunque ayuda a reponer mercancías faltantes que la población solicita, ha provocado que los precios de productos básicos alcancen niveles que resultan inalcanzables para gran parte de la población. Los adultos mayores, que dependen exclusivamente de una pensión en moneda nacional, suelen ser los más afectados. Con ingresos insuficientes, ven difícil acceder a alimentos, medicinas y artículos de primera necesidad.\n",
+    "\n",
+    "\"Somos conscientes de que con los precios de hoy día, exorbitantes, la pensión mínima no satisface las necesidades de los jubilados”, admitió Lino Pérez Díaz, director provincial del Instituto Nacional de Seguridad Social (Inass) en Cienfuegos. - Cubadebate, 4 de marzo de 2022"
    ]
   },
   {
@@ -88,10 +90,6 @@
     "El crecimiento de la dolarización informal ha transformado totalmente la perspectiva de consumo en la isla. Muchos productos esenciales, desde alimentos hasta artículos de higiene, se comercializan en dólares o con precios en función a esta moneda, esto ha disparado su valor en el mercado. Esta realidad ha obligado al gobierno a intervenir, estableciendo topes de precios en algunos productos básicos con la intención de contener la inflación y proteger a los sectores más vulnerables de la población.\n",
     "\n",
     "Sin embargo, en la práctica, estas medidas no siempre logran su cometido. Los controles de precios, aunque bien intencionados, a menudo se enfrentan a una oferta limitada, lo que genera desabastecimiento y mercados paralelos. Para muchos cubanos, especialmente los adultos mayores que dependen exclusivamente de pensiones fijas en moneda nacional, esta situación representa un gran desafío.\n",
-    "\n",
-    "La escasez no solo afecta su alimentación, sino también su acceso a medicamentos, productos de higiene y otros bienes indispensables para una vida digna. En este contexto, la inflación no es solo una cifra económica: es una amenaza directa a su bienestar, su salud y su autonomía.\n",
-    "\n",
-    "\"Somos conscientes de que con los precios de hoy día, exorbitantes, la pensión mínima no satisface las necesidades de los jubilados”, admitió Lino Pérez Díaz, director provincial del Instituto Nacional de Seguridad Social (Inass) en Cienfuegos. - Cubadebate, 4 de marzo de 2022\n",
     "\n",
     "### Productos básicos con precios topados                         \n",
     "\n",
